# AutonomIQ

./: .gitignore  Readme.md  manage.py  pyproject.toml  stock.py
automation_main/: asgi.py  celery.py  forms.py  settings.py  urls.py  views.py  wsgi.py
dataentry/: admin.py  models.py  tasks.py  urls.py  utils.py  views.py
dataentry/management/commands/: exportData.py  importData.py
dataentry/migrations/: 0001_initial.py
emails/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
emails/migrations/: 0001_initial.py  0002_email_subscriber.py  0003_alter_email_attachement_alter_email_body.py  0004_emailtracking.py  0005_sent.py
image_compression/: admin.py  forms.py  models.py  urls.py  views.py
image_compression/migrations/: 0001_initial.py
stock_analysis/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
stock_analysis/migrations/: 0001_initial.py  0002_stockdata.py
templates/: alerts.html  base.html  home.html  login.html  register.html
templates/dataentry/: export_data.html  importData.html
templates/emails/: send_emails.html  track_dashboard.html  track_stats.html
templates/image_compressor/: compressor.html
templates/stock_analysis/: stock_detail.html  stocks.html
uploads/: admin.py  models.py
uploads/migrations/: 0001_initial.py
